--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,20 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+  <nav>
+    <ul>
+      <%= link_to "overflow", root_path %>
+      <% if session[:user_id] %>
+        <%= link_to "| Profile |", '#' %>
+        <%= link_to "| Logout |", logout_path %>
+      <% else %>
+        <%= link_to "| Login |", login_path %>
+        <%= link_to "| Register |", register_path %>
+      <% end %>
+    </ul>
+  </nav>
 
 <%= yield %>
 
