--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,7 +3,7 @@
 <h2>Top Questions</h2>
 <%if @questions.any? %>
 <% @questions.each do |question| %>
-<h4><%= question.title%></h4>
+<h4><%= link_to question.title, question%></h4>
 <p><%= question.body %></p>
 <p>By: <%= question.user.username %></p>
 <p>+++++++++++++++++++++++++++++++++++++++++++++++++++++++++</p>
