--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,3 +1,4 @@
 <h1>Edit Answer</h1>
 
-<%= render partial 'answer_form' %>
+<%= render partial: 'answer_form' %>
+<%= link_to "DELETE" ,answer_path(@answer), method: :delete%>
