--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <ul>
       <%= link_to "overflow", root_path %>
       <% if session[:user_id] %>
-        <%= link_to "| Profile |", '#' %>
+        <%= link_to "| Trending |", '/trending' %>
         <%= link_to "| Logout |", logout_path %>
       <% else %>
         <%= link_to "| Login |", login_path %>
