--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,8 +2,6 @@
 <div class="question-stuff">
 <p><%= @question.body %></p>
 <p>Votes: <%= @question.vote_count %></p>
-<p><%= link_to "Edit", edit_question_path(@question)%></p>
-<p><%= link_to "Add a Comment", new_question_comment_path(@question)%></p>
 <div class="question-vote">
   <%= form_for [@question, @vote] do |f| %>
     <%= f.hidden_field :question_id, :value => @question.id%>
@@ -15,6 +13,7 @@
     <%= f.submit %>
   <% end %>
 </div>
+<p><%= button_to "Add a Comment", new_question_comment_path(@question)%></p>
 </div>
 <h2 class="header">Comments on Question</h2>
 <% if @question.comments.any? %>
@@ -57,9 +56,8 @@
           <%= f.submit %>
         <% end %>
       </div>
-      <%= link_to "Edit" , edit_answer_path(answer)%>
       <%end%>
-      <%= link_to "Add a Comment", new_answer_comment_path(answer)%>
+      <p><%= button_to "Add a Comment", new_answer_comment_path(answer)%></p>
       <h4 class="header">Answer Comments</h4>
         <%if answer.comments.any?%>
           <div class="comments-container">
